--- a/Static/header.css
+++ b/Static/header.css
@@ -64,5 +64,5 @@ header {
     background-color: #fff;
     padding: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    z-index: 9999;
+    /* z-index: 9999; */
 }
