--- a/Static/header.css
+++ b/Static/header.css
@@ -1,11 +1,14 @@
 .menu {
     margin: 0;
-    background-color: #fff;
+    background-color: #148C9F;
     height: 15vh;
-    width: 97%;
+    width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-end;
+    position: fixed;
+    flex-direction: row;
 }
+
 
 .a {
     margin-left: 1vh;
@@ -20,13 +23,16 @@
     color: #1e1e1c;
     text-decoration: underline 3px #148C9F;
     font-weight: bold;
+    padding: 10px;
+    text-decoration: underline transparent;
+    margin-right: 47px;
 }
 
-.menu a:hover {
+/* .menu a:hover {
     font-weight: bold;
     text-decoration: underline 2px #1e1e1c;
     color: #148C9F;
-}
+} */
 
 #logo {
     margin-top: -15px;
@@ -65,4 +71,64 @@ header {
     padding: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     /* z-index: 9999; */
+
+}
+
+.welcome-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    background-color: #ffffff;
+    background-image: linear-gradient(to bottom, rgb(66, 65, 65), rgb(0, 0, 0))
+}
+
+.welcome-section>p {
+    font-size: 3rem;
+    font-weight: 200;
+    font-style: italic;
+    color: #148C9F;
+}
+
+#mescompetences {
+    max-width: 640px;
+    margin: 1rem auto 6rem auto;
+    border-bottom: 0.2rem solid var(--main-white);
+}
+
+h2 {
+    font-size: 3.2rem;
+}
+
+#welcome-section>h1 {
+    font-size: 4rem;
+    color: #fff;
+}
+
+h1,
+h2 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    text-align: center;
+}
+
+.example_c {
+    color: #494949 !important;
+    text-transform: uppercase;
+    text-decoration: underline transparent;
+    background: #ffffff;
+    padding: 20px;
+    border: 4px solid #494949 !important;
+    display: inline-block;
+    transition: all 0.4s ease 0s;
+
+}
+
+.example_c:hover {
+    color: #ffffff !important;
+    background: #000000;
+    border-color: #ffffff !important;
+    transition: all 0.4s ease 0s;
 }
