--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body>h1 {
 }
 
 #competence {
+  width: 100%;
   background: linear-gradient(to bottom, rgb(0, 0, 0), rgb(255, 255, 255));
   text-align: center;
   padding: 10rem 2rem;
@@ -117,6 +118,7 @@ body>h1 {
 
 
 .haut {
+  width: 100%;
   background-color: #148C9F;
   text-align: center;
   padding: 5rem 5rem;
@@ -206,6 +208,7 @@ body>img {
 
 
 .projects-section {
+  width: 100%;
   text-align: center;
   padding: 10rem 2rem;
   background: var(--main-blue);
